--- a/pages/monthly_transfer.html
+++ b/pages/monthly_transfer.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/WoBot/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WoBot</title>
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/header_footer_nav.css">
-    <link rel="stylesheet" href="../styles/slicknav.css" />
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/header_footer_nav.css">
+    <link rel="stylesheet" href="styles/slicknav.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../js/jquery.slicknav.js"></script>
 </head>
 <header>
     <nav>
         <ul id="menu">
-            <li><a href="../index.html">Home</a></li>
-             <li><a href="/pages/chart_leafbot.html">Chart Leafbot</a></li>
-            <li><a href="/pages/close_bids.html">Close Bids</a></li>        
-            <li><a href="/pages/chart_bids.html">Chart Bids</a></li>
-            <li><a href="/pages/chart_voa5.html">Chart VoA 5*</a></li>
-            <li><a href="/pages/monthly_transfer.html">Monthly Transfer</a></li>
+            <li><a href="index.html">Home</a></li>
+             <li><a href="pages/chart_leafbot.html">Chart Leafbot</a></li>
+            <li><a href="pages/close_bids.html">Close Bids</a></li>        
+            <li><a href="pages/chart_bids.html">Chart Bids</a></li>
+            <li><a href="pages/chart_voa5.html">Chart VoA 5*</a></li>
+            <li><a href="pages/monthly_transfer.html">Monthly Transfer</a></li>
         </ul>
     </nav>
 </header>
