--- a/pages/chart_leafbot.html
+++ b/pages/chart_leafbot.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WoBot</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/header_footer_nav.css">
-    <link rel="stylesheet" href="styles/chart_leafbot.css">
-    <link rel="stylesheet" href="styles/slicknav.css" />
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/header_footer_nav.css">
+    <link rel="stylesheet" href="../styles/chart_leafbot.css">
+    <link rel="stylesheet" href="../styles/slicknav.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
+    <script src="../js/jquery.slicknav.js"></script>
 </head>
 <header>
     <nav>
         <ul id="menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
              <li><a href="chart_leafbot.html">Chart Leafbot</a></li>
             <li><a href="close_bids.html">Close Bids</a></li>        
             <li><a href="chart_bids.html">Chart Bids</a></li>
@@ -81,6 +81,6 @@
         <p>&copy;TheWobster - Dawn of Arawn   |     Contact: doctawhitewob2@gmail.com</p>
     </footer>
 </main>
-    <script src="js/tools.js"></script>
-    <script src="js/chart_leafbot.js"></script>
+    <script src="../js/tools.js"></script>
+    <script src="../js/chart_leafbot.js"></script>
 </html>
